[package]
name = "chaos-reigns"
version = "0.1.0"
authors = ["Eric McBride <ericmcbridedeveloper@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
tokio = { version = "0.2.6", features = ["full"] }
kube_async = { package = "kube", version = "0.23.0", features = ["openapi"] }
k8s-openapi = { version = "0.6.0", default-features = false, features = ["v1_15"] }
rand = "0.7.3"
serde_json = "1.0.45"
serde = { version = "1.0.104", features = ["derive"] }
